FRONT-3189: Fix search offcanvas overlapping navbar dorpdown on lg.

--- a/src/themes/default/src/scss/_header.scss
+++ b/src/themes/default/src/scss/_header.scss
@@ -113,6 +113,9 @@ $header-margin: 1.5rem 0.5rem !default;
     margin-top: -#{map-get($spacers, 2)};
     margin-bottom: -#{map-get($spacers, 2)};
   }
+  .bcl-header__navbar .dropdown-menu {
+    z-index: 1050; // Make sure dropdown overlaps the search offcanvas
+  }
   .bcl-header__project {
     padding-bottom: map-get($spacers, 3);
   }
